--- a/Dartin/Dartin.Application/Properties/Resources.resx
+++ b/Dartin/Dartin.Application/Properties/Resources.resx
@@ -121,7 +121,7 @@
     <value>Notation for score.
 
 [x score]
-x 	= the multuplier, d for double, t for triple.
+x 	= the multiplier, d for double, t for triple.
 score 	= the score in integers, example 19
 
 Examples
