Fixed wrong score

--- a/Dartin/Dartin.Application/Properties/Resources.resx
+++ b/Dartin/Dartin.Application/Properties/Resources.resx
@@ -129,10 +129,10 @@ Examples
 T20 	= Triple 20
 D19 	= Double 19
 16  	= Single 16
-bull 	= Bullseye
+Bull/bull 	= Bullseye
+Obull/obull	= Outer Bullseye
 50	= Bullseye 
-obull	= Outer Bullseye
-20 	= Outer Bullseye</value>
+25 	= Outer Bullseye</value>
   </data>
   <data name="TestString" xml:space="preserve">
     <value>Hello</value>
